<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="profile" type="com.google.resumemaker.entity.Profile" />
        <variable name="fragment" type="com.google.resumemaker.ui.profile.ProfileFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:layout_gravity="end"
            android:onClick="@{(view) -> fragment.onEditButtonClick()}"
            android:src="@drawable/ic_edit"/>

            <ScrollView
                android:id="@+id/profile_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/first_name_layout"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/first_name_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/first_name"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/first_name_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.firstName != null ? profile.firstName : @string/data_not_set}"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/last_name_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/last_name_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/last_name"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/last_name_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.lastName!= null ? profile.lastName: @string/data_not_set}"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/email_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/email_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/email"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/email_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.email!= null ? profile.email : @string/data_not_set}"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dob_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dob_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/dob"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/dob_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.dateOfBirth != null ? profile.dob : @string/data_not_set}"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/position_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/position_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/target_position"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/position_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.targetPosition!= null ? profile.targetPosition : @string/data_not_set}"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </ScrollView>
    </FrameLayout>
</layout>
